adding a mailer order confirmation after a user completes purchase.

--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -9,5 +9,10 @@
 
   <body>
     <%= yield %>
+    <br>
+    Regards, Phonify Store © 2022
+    <br>
+    <br>
+    <%= image_tag attachments['logo.svg'].url, alt:'Phonify-logo', width: 200 %>
   </body>
 </html>
